--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -278,13 +278,11 @@ CONFIG_CC_STACKPROTECTOR_NONE=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 # CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_THIN_ARCHIVES=y
-CONFIG_LTO=y
+# CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
-CONFIG_THINLTO=y
-# CONFIG_LTO_NONE is not set
-CONFIG_LTO_CLANG=y
-# CONFIG_CFI_CLANG is not set
+CONFIG_LTO_NONE=y
+# CONFIG_LTO_CLANG is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_ROP_PROTECTION_NONE=y
 # CONFIG_SHADOW_CALL_STACK is not set
@@ -510,6 +508,7 @@ CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
 # CONFIG_ARM64_ERRATUM_843419 is not set
 CONFIG_ARM64_ERRATUM_1024718=y
+# CONFIG_ARM64_ERRATUM_1542418 is not set
 CONFIG_ARM64_ERRATUM_1188873=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
@@ -613,8 +612,8 @@ CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_ARM64_SSBD=y
-CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
+CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -638,6 +637,7 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 CONFIG_ARM64_MODULE_PLTS=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
+CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
